# lb5_6

lb5_6/: env.txt  pyproject.toml
lb5_6/app/: __init__.py  models.py  views.py
lb5_6/migrations/versions/: a41233ab8673_initial_migration.py  b17864c44e6f_init_migration.py  bc4865f9d136_init_migration.py  d93f6bebab4d_init_migration.py  e4cfdd936f72_init_migration.py
