[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
flask-sqlalchemy = "^3.0.3"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.15"
flask-migrate = "^4.0.4"
flask = "^2.3.2"
psycopg2 = "^2.9.6"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"
psycopg2-binary = "^2.9.6"
blueprint = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
